--- a/partials/video.overlay.html
+++ b/partials/video.overlay.html
@@ -24,7 +24,7 @@
              data-width="640"
              data-height="360">
         <p class="shadow">It's super easy to overlay HTML over HTML5 media elements using ng-media!</p>
-        <img src="/assets/img/anigif.gif" title="Wow!" width="200" />
+        <img src="assets/img/anigif.gif" title="Wow!" width="200" />
       </video>
     </div>
   </div>
