--- a/partials/video.html
+++ b/partials/video.html
@@ -21,6 +21,7 @@
                label: 'Subtitles'
              }"
              data-controls="true"
+             data-preload="true"
              data-width="640"
              data-height="360">
       </video>
