--- a/partials/video.overlay.html
+++ b/partials/video.overlay.html
@@ -21,6 +21,7 @@
                label: 'Subtitles'
              }"
              data-controls="true"
+             data-preload="true"
              data-width="640"
              data-height="360">
         <p class="shadow">It's super easy to overlay HTML over HTML5 media elements using ng-media!</p>
