--- a/partials/video.html
+++ b/partials/video.html
@@ -38,7 +38,7 @@
       <span style='color:#0000e6; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;kind: 'subtitles',</span>
       <span style='color:#0000e6; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;srclang: 'en-US'</span>
       <span style='color:#0000e6; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;}"</span><span style='color:#274796; '></span>
-      <span style='color:#274796; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#074726; '>data</span><span style='color:#274796; '>-preload</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"true"</span><span style='color:#274796; '></span>
+      <span style='color:#274796; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#074726; '>data</span><span style='color:#274796; '>-preload</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"auto"</span><span style='color:#274796; '></span>
       <span style='color:#274796; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#074726; '>data</span><span style='color:#274796; '>-autoplay</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"true"</span><span style='color:#274796; '></span>
       <span style='color:#274796; '>&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;&#xa0;</span><span style='color:#074726; '>data</span><span style='color:#274796; '>-</span><span style='color:#074726; '>controls</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"true"</span><span style='color:#a65700; '>></span>
       <span style='color:#a65700; '>&lt;/</span><span style='color:#5f5035; '>video</span><span style='color:#a65700; '>></span>    </pre>
